@@ -31,7 +31,7 @@ $(PNG_LIBS) $(Z_LIBS) $(JS_LIBS) $(JNI_LIBS)
 libopenvrml_la_SOURCES = Doc.cpp doc2.cpp MathUtils.cpp dummysound.cpp \
 Image.cpp Audio.cpp System.cpp Viewer.cpp bvolume.cpp VrmlFrustum.cpp \
 VrmlRenderContext.cpp field.cpp VrmlMatrix.cpp nodetypeptr.cpp \
-VrmlNamespace.cpp VrmlNodePtr.cpp Route.cpp node.cpp proto.cpp script.cpp \
+VrmlNamespace.cpp Route.cpp node.cpp nodeptr.cpp proto.cpp script.cpp \
 ScriptJDK.cpp VrmlScene.cpp vrml97node.cpp
 
 libopenvrml_la_LIBADD = $(top_builddir)/lib/antlr/libantlr.la
@@ -39,8 +39,8 @@ libopenvrml_la_LIBADD = $(top_builddir)/lib/antlr/libantlr.la
 OpenVRMLincludedir = $(includedir)/OpenVRML
 OpenVRMLinclude_HEADERS = common.h Audio.h Doc.h Image.h MathUtils.h Route.h \
 ScriptJDK.h script.h System.h Viewer.h bvolume.h VrmlEvent.h VrmlFrustum.h \
-field.h nodetypeptr.h VrmlNamespace.h proto.h VrmlNodePtr.h node.h \
-VrmlMatrix.h vrml97node.h VrmlRenderContext.h VrmlScene.h doc2.hpp
+field.h VrmlMatrix.h nodetypeptr.h VrmlNamespace.h proto.h nodeptr.h node.h \
+vrml97node.h VrmlRenderContext.h VrmlScene.h doc2.hpp
 
 noinst_HEADERS = Vrml97Parser.hpp Vrml97ParserTokenTypes.hpp private.h sound.h
 
