@@ -12,7 +12,7 @@
 
 # include <memory>
 # include "field.h"
-# include "VrmlNodePtr.h"
+# include "nodeptr.h"
 # define ANTLR_LBRACE {
 # define ANTLR_RBRACE }
 
